force-app/main/default/objects/ssot__Program__dlm/fields/ssot__ActiveEnrolleeCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActiveEnrolleeCount__c</fullName>
    <label>Active Enrollee Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActiveEnrolleeCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>