force-app/main/default/objects/ssot__Program__dlm/fields/ssot__CurrentMonthDisbCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentMonthDisbCount__c</fullName>
    <label>Current Month Disbursed Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentMonthDisbCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>