force-app/main/default/objects/ssot__Program__dlm/fields/ssot__ParentProgramId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentProgramId__c</fullName>
    <label>Parent Program</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentProgramId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>