force-app/main/default/objects/ssot__Program__dlm/fields/ssot__ProgramStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgramStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgramStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>