force-app/main/default/objects/ssot__Program__dlm/fields/ssot__rel_1716668772718_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668772718_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program_ParentProgramId_map_Program__rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>Program_ParentProgramId_map_Program__rel</relationshipLabel>
    <relationshipName>rel_1716668772718_end</relationshipName>
    <type>Lookup</type>
</CustomField>