force-app/main/default/objects/ssot__Program__dlm/fields/ssot__Summary__c.field-meta.xml
<CustomField>
    <fullName>ssot__Summary__c</fullName>
    <label>Summary</label>
    <length>100</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Summary</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>