force-app/main/default/objects/ssot__Program__dlm/fields/ssot__TotalEnrolleeCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalEnrolleeCount__c</fullName>
    <label>Total Enrollee Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalEnrolleeCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>